Sprint/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv179-deployment-demo-dep
  labels:
    app: pv179-deployment-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pv179-deployment-demo
  template:
    metadata:
      labels:
        app: pv179-deployment-demo
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: pv179-deployment-demo
        image: registry.gitlab.ics.muni.cz:443/492883/pv179-badminton/app:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
